Descripción de los cambios realizados

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,14 @@
  * Consider organizing styles into separate files for maintainability.
  */
 
-      @import "bootstrap"; 
+ /*
+ *= require_tree .
+ *= require_self
+ */
+
+@import "bootstrap";
+
+      
     
 
  
