Actualización de la fecha en el pie de página y otros ajustes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,5 +8,5 @@
   </p>
 
   <!-- Botón para explorar productos/servicios -->
-  <%= link_to "Explorar Ofertas", products_path, class: "btn btn-primary btn-lg" %>
+  <%= link_to "Explorar Ofertas", product_offers_path, class: "btn btn-primary btn-lg" %>
 </div>
