--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
 
   <!-- Pie de Página -->
   <footer class="text-center py-3 bg-light">
-    <p>&copy; 2023 Major Team. Todos los derechos reservados.</p>
+  <p>&copy; <%= Time.current.year %> Major Team. Todos los derechos reservados.</p>
   </footer>
 </body>
 </html>
