--- a/app/views/product_offers/_form.html.erb
+++ b/app/views/product_offers/_form.html.erb
@@ -1,18 +1,20 @@
-<%= form_with model: @product, local: true, multipart: true do |form| %> 
-  <!-- Campos del formulario -->
+<%= form_with model: @product_offer, local: true, multipart: true do |form| %> 
+  <!-- Nombre -->
 <div class="mb-3">
-      <%= form.label :name, "Nombre del Producto/Servicio", class: "form-label" %>
-      <%= form.text_field :name, class: "form-control", required: true %>
+      <%= form.label :title, "Nombre del Producto/Servicio", class: "form-label" %>
+      <%= form.text_field :title, class: "form-control", required: true %>
     </div>
-  
+
+    <!-- Descripción -->
     <div class="mb-3">
       <%= form.label :description, "Descripción", class: "form-label" %>
       <%= form.text_area :description, class: "form-control", rows: 4, required: true %>
     </div>
-  
-    <div>
-    <%= form.label :image, "Foto del Producto/Servicio" %>
-    <%= form.file_field :image %>
+
+    <!-- Imágen -->
+    <div class="mb-3">
+    <%= form.label :photo, "Foto del Producto/Servicio" %>
+    <%= form.file_field :photo, required: true %> 
   </div>
   <!-- Botón de envío -->
   <div>
@@ -20,18 +22,19 @@
   </div>
   
 
-
+    <!-- Precio -->
     <div class="mb-3">
       <%= form.label :price, "Precio", class: "form-label" %>
       <%= form.number_field :price, step: 0.01, class: "form-control", required: true %>
     </div>
   
+    <!-- Categoría -->
     <div class="mb-3">
       <%= form.label :category_id, "Categoría", class: "form-label" %>
       <%= form.collection_select :category_id, Category.all, :id, :name, { prompt: "Selecciona una categoría" }, class: "form-select", required: true %>
     </div>
   
-    <% if @product.category&.name == "Mercado Laboral" %>
+    <% if @product_offer.category&.name == "Mercado Laboral" %>
       <div class="mb-3">
         <%= form.label :service_type, "Tipo de Servicio", class: "form-label" %>
         <%= form.text_field :service_type, class: "form-control", required: true %>
